--- a/src/App.css
+++ b/src/App.css
@@ -347,6 +347,13 @@
   .lg-pr-40 {
     padding-right: 40px;
   }
+  .lg-px-40 {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+  .lg-pt-20 {
+    padding-top: 20px;
+  }
 }
 @media (min-width: 1280px) {
   .container {
