--- a/src/component/Navbar/NavbarStyle.css
+++ b/src/component/Navbar/NavbarStyle.css
@@ -65,7 +65,8 @@
 .nav-link {
   color: #777;
   text-decoration: none;
-  /* border-bottom: 2px solid transparent; */
+  border-top: 2px solid transparent;
+  border-bottom: 2px solid transparent;
 }
 .nav-svg {
   margin-right: 5px;
@@ -77,8 +78,11 @@
 }
 .nav-link:hover {
   color: #0f67be;
-  border-color: #0f67be;
+  border-bottom-color: #0f67be;
   transition: all ease-in-out 300ms;
+}
+.nav-link.active {
+  border-bottom-color: #0f67be;
 }
 .nav-menu-hamburger {
   width: 1rem;
